--- a/src/app/activity-request-form/activity-request-form.component.html
+++ b/src/app/activity-request-form/activity-request-form.component.html
@@ -1,4 +1,5 @@
 <div class="container mt-5 p-3">
+    <p-toast/>
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <img src="assets/form-avatar.png" class="form-avatar rounded" alt="Solex-Avatar">
