--- a/src/app/activity-request-form/activity-request-form.component.html
+++ b/src/app/activity-request-form/activity-request-form.component.html
@@ -270,7 +270,8 @@
                         <label for="tasks">
                             <span class="fw-bold span-fs">Attachment when sick leave requested</span>
                         </label>
-                    <input class="form-control" type="file" id="formFile" formControlName="attachSickLeave">
+                    <!-- <input class="form-control" type="file" id="formFile" formControlName="attachSickLeave"> -->
+                     
                     </div>
                 </div>
                 <div class="row mt-4">
